Fixed z-index

--- a/src/app/components/additional-content/slider/slider.component.css
+++ b/src/app/components/additional-content/slider/slider.component.css
@@ -28,7 +28,7 @@
   margin: auto;
   bottom: 34px;
   border-radius: 999px;
-  left: 176px;
+  left: 160px;
   z-index: 100;
   font-size: 48px;
   cursor: pointer;
@@ -67,10 +67,14 @@
   position: absolute;
   bottom: 10px;
   left: 10px;
-  width: 208px;
+  width: 190px;
   height: 72px;
   font-size: 2em;
   color: #ccc;
   padding-top: 12px;
   padding-left: 26px;
+}
+
+.ngucarousel-items {
+  transition: none !important;
 }
