--- a/src/app/components/menu/basic-menu/basic-menu.component.css
+++ b/src/app/components/menu/basic-menu/basic-menu.component.css
@@ -6,6 +6,7 @@
     transform: translateX(-100%);
     left: 60px;
     top: 0;
+    z-index: 10000000;
 }
 
 #menu.expanded {
